[package]
name = "tr_logic_llc"
version = "0.1.0"
authors = ["Amir Absolutely <mr.amirka@ya.ru>"]

[dependencies]
libc = "0.2"
actix = "0.8.3"
actix-rt = "0.2.5"
actix-multipart = "0.1.4"
actix-web = { version = "1.0.0", features = ["ssl"] }
num_cpus = "1.10.1"
serde_derive = "1.0.101"
serde_json = "1.0.40"
lazy_static = "1.4.0"
env_logger = "0.7.0"
actix-files = "0.1.4"
serde = "1.0.101"
futures = "0.1.29"
futures-cpupool = "0.1.8"
mime = "0.3.14"
regex = "1.3.1"
bytes = "0.4.12"
rust-crypto = "0.2.36"
base64 = "0.10.1"
graceful = "0.1.1"
config = "0.9.3"
positioned-io = "0.2.2"
async_fs = { git = "https://github.com/mr-amirka/async_fs" }
opencv = { git = "https://github.com/mr-amirka/opencv-rust", default-features = false, features = ["opencv-41"] }
